reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_namespace_names-3.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: rust
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: foo
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        pub x: XInterface<C>,
        pub y: YInterface<C>,
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self {
                x: XInterface::new(client.clone()),
                y: YInterface::new(client.clone()),
                client,
            }
        }
    }

    #[derive(Debug)]
    pub struct XInterface<C: reflectapi::rt::Client + Clone> {
        pub foo: XFooInterface<C>,
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> XInterface<C> {
        pub fn new(client: C) -> Self {
            Self {
                foo: XFooInterface::new(client.clone()),
                client,
            }
        }
    }

    #[derive(Debug)]
    pub struct XFooInterface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> XFooInterface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn get(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<reflectapi::Empty, reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/x.foo.get", input, headers).await
        }
    }

    #[derive(Debug)]
    pub struct YInterface<C: reflectapi::rt::Client + Clone> {
        pub foo: YFooInterface<C>,
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> YInterface<C> {
        pub fn new(client: C) -> Self {
            Self {
                foo: YFooInterface::new(client.clone()),
                client,
            }
        }
    }

    #[derive(Debug)]
    pub struct YFooInterface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> YFooInterface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn get(
            &self,
            input: reflectapi::Empty,
            headers: reflectapi::Empty,
        ) -> Result<(), reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/y.foo.get", input, headers).await
        }
    }
}
