reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_namespace_names-4.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "foo",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/x.foo.get": {
      "description": "",
      "post": {
        "operationId": "x.foo.get",
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "description": "empty object",
                  "type": "object",
                  "properties": {}
                }
              }
            }
          }
        }
      }
    },
    "/y.foo.get": {
      "description": "",
      "post": {
        "operationId": "y.foo.get",
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/std.tuple.Tuple0"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      }
    }
  }
}
