reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_namespace_names.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: schema
---
{
  "name": "foo",
  "functions": [
    {
      "name": "x.foo.get",
      "path": "",
      "output_kind": "single",
      "serialization": [
        "json",
        "msgpack"
      ]
    },
    {
      "name": "y.foo.get",
      "path": "",
      "output_kind": "single",
      "output_type": {
        "name": "std::tuple::Tuple0"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple0",
        "description": "Unit type"
      }
    ]
  }
}
