reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__generic_and_type_conflict-4.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/get": {
      "description": "",
      "post": {
        "operationId": "get",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "type": "object",
                "title": "reflectapi_demo.tests.namespace.K<T<std.tuple.Tuple0>>",
                "required": [
                  "t"
                ],
                "properties": {
                  "t": {
                    "type": "array",
                    "prefixItems": [
                      {
                        "$ref": "#/components/schemas/std.tuple.Tuple0"
                      }
                    ]
                  }
                }
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "title": "reflectapi_demo.tests.namespace.K<T<std.tuple.Tuple0>>",
                  "required": [
                    "t"
                  ],
                  "properties": {
                    "t": {
                      "type": "array",
                      "prefixItems": [
                        {
                          "$ref": "#/components/schemas/std.tuple.Tuple0"
                        }
                      ]
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      }
    }
  }
}
