reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__namespace_with_dash.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: schema
---
{
  "name": "pet-orders",
  "functions": [
    {
      "name": "jobs-two.pet-orders.list-x",
      "path": "",
      "description": "desc",
      "output_kind": "complete",
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      }
    ]
  }
}
